Citrine completed for 35.5.6

--- a/!css/screen.css
+++ b/!css/screen.css
@@ -11,6 +11,13 @@ b {
 }
 .apassive{}.afirst{}.asecond{}.athird{}.afourth{}
 
+ul {
+	margin: 0 0 0 2em;
+}
+li {
+	list-style: disc;
+	padding-bottom: .5em;
+}
 
 
 
@@ -40,6 +47,7 @@ html {
 nav {
 	margin: auto;
 	margin-bottom: 1em;
+	margin-top: 1em;
 }
 nav ul {
 	display: flex;
@@ -52,8 +60,18 @@ nav li {
 main {
 	padding: 0 1em 0 1em;
 }
+p {
+	margin-bottom: .5em;
+}
 h1 {
-	margin-bottom: 1em;
+	margin-bottom: .5em;
+	font-size: 2em;
+	font-weight: bold;
+}
+h2 {
+	margin-bottom: .25em;
+	font-size: 1.5em;
+	font-weight: bold;
 }
 footer {
 	margin-top: 1em;
