--- a/!css/screen.css
+++ b/!css/screen.css
@@ -9,6 +9,9 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 b {
 	font-weight: bold;
 }
+a {
+	color: #0099ff;
+}
 .apassive{}.afirst{}.asecond{}.athird{}.afourth{}
 
 ul {
@@ -43,6 +46,8 @@ li {
 
 html {
 	font-family: Arial;
+	background-color: #222;
+	color: #fff;
 }
 nav {
 	margin: auto;
@@ -54,7 +59,7 @@ nav ul {
 	justify-content: space-around;
 }
 nav li {
-	border-bottom: .125em solid black;
+	border-bottom: .125em solid #0099ff;
 	padding: 0 1em 0 1em;
 }
 main {
@@ -84,5 +89,5 @@ footer {
 }
 #botfooter {
 	font-style: italic;
-	color: rgba(0,0,0, .4);
+	color: rgba(255,255,255, .4);
 }
