--- a/!css/screen.css
+++ b/!css/screen.css
@@ -6,7 +6,7 @@
 */
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,main,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block;}body{line-height:1;}ol,ul{list-style:none;}blockquote,q{quotes:none;}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}table{border-collapse:collapse;border-spacing:0;}
 
-b {
+strong {
 	font-weight: bold;
 }
 a {
@@ -30,14 +30,6 @@ a {
 	color: #ff5555;
 }
 
-ul {
-	
-}
-li {
-	list-style: disc;
-	margin: 0 0 .5em 2em;
-}
-
 button.buildbutton {
 	border: .0125em solid white;
 	padding: .125em .25em;
@@ -58,7 +50,7 @@ button.buildbutton {
 
 
 
-/*Generic*/
+/*Used on all pages*/
 
 html {
 	font-family: Arial;
@@ -97,7 +89,16 @@ h2 {
 	font-size: 1.5em;
 	font-weight: bold;
 }
-
+em {
+	font-style: italic;
+}
+ul {
+	margin-bottom: 1em;
+}
+li {
+	list-style: disc;
+	margin: 0 0 .5em 2em;
+}
 
 footer {
 	margin-top: 1em;
